feat: introduce i18n support with new documentation and examples, and remove docs header scroll progress UI.

--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@effuse/core": "workspace:*",
+		"@effuse/i18n": "workspace:*",
 		"@effuse/ink": "workspace:*",
 		"@effuse/query": "workspace:*",
 		"@effuse/router": "workspace:*",
