--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -15,7 +15,17 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true
+		"noFallthroughCasesInSwitch": true,
+		"baseUrl": ".",
+		"paths": {
+			"@effuse/core": ["../packages/core/src/index.ts"],
+			"@effuse/core/*": ["../packages/core/src/*"],
+			"@effuse/router": ["../packages/router/src/index.ts"],
+			"@effuse/store": ["../packages/store/src/index.ts"],
+			"@effuse/query": ["../packages/query/src/index.ts"],
+			"@effuse/ink": ["../packages/ink/src/index.ts"],
+			"@effuse/i18n": ["../packages/i18n/src/index.ts"]
+		}
 	},
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
