--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@types/node": "^25.0.3",
 		"typescript": "^5.9.3",
-		"vite": "^7.3.0"
+		"vite": "^7.3.0",
+		"@effuse/compiler": "workspace:*"
 	}
 }
