--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -24,7 +24,9 @@
 			"@effuse/store": ["../packages/store/src/index.ts"],
 			"@effuse/query": ["../packages/query/src/index.ts"],
 			"@effuse/ink": ["../packages/ink/src/index.ts"],
-			"@effuse/i18n": ["../packages/i18n/src/index.ts"]
+			"@effuse/i18n": ["../packages/i18n/src/index.ts"],
+			"@effuse/compiler": ["../packages/compiler/src/index.ts"],
+			"@effuse/compiler/*": ["../packages/compiler/src/*"]
 		}
 	},
 	"include": ["src"],
