--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -75,6 +75,10 @@
 	},
 	"packageManager": "pnpm@10.26.2",
 	"dependencies": {
+		"@effect/opentelemetry": "^0.60.0",
+		"@opentelemetry/api": "^1.9.0",
+		"@opentelemetry/sdk-trace-base": "^2.2.0",
+		"@opentelemetry/sdk-trace-web": "^2.2.0",
 		"effect": "^3.19.13"
 	},
 	"devDependencies": {
@@ -84,7 +88,7 @@
 		"jsdom": "^27.4.0",
 		"tsup": "^8.5.1",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.50.1",
+		"typescript-eslint": "^8.51.0",
 		"vitest": "^4.0.16"
 	}
 }
