--- a/app/package.json
+++ b/app/package.json
@@ -18,12 +18,13 @@
 		"@effuse/query": "workspace:*",
 		"@effuse/router": "workspace:*",
 		"@effuse/store": "workspace:*",
-		"lenis": "^1.3.17"
+		"lenis": "^1.3.17",
+		"motion": "^12.23.26"
 	},
 	"devDependencies": {
+		"@effuse/compiler": "workspace:*",
 		"@types/node": "^25.0.3",
 		"typescript": "^5.9.3",
-		"vite": "^7.3.0",
-		"@effuse/compiler": "workspace:*"
+		"vite": "^7.3.0"
 	}
 }
