chore: final cleanup and script updates - Update gen-layers script in package.json to use strip-types - Export new layer-bound component types from blueprint - Include src/types in app tsconfig for better type coverage

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -29,6 +29,6 @@
 			"@effuse/compiler/*": ["../packages/compiler/src/*"]
 		}
 	},
-	"include": ["src"],
+	"include": ["src", "src/types"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
