feat: Replace generated layer registry with TypeScript module augmentation for layer type safety and add ref to docs md files.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,8 +57,7 @@
 		"build": "tsup",
 		"dev": "tsup --watch",
 		"lint": "eslint src",
-		"typecheck": "tsc --noEmit",
-		"gen-layers": "node --experimental-strip-types scripts/gen-layers.ts"
+		"typecheck": "tsc --noEmit"
 	},
 	"keywords": [
 		"ui-library",
