--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,24 +1,134 @@
 {
-	"branches": ["main"],
+	"branches": [
+		"main"
+	],
 	"plugins": [
-		"@semantic-release/commit-analyzer",
+		[
+			"@semantic-release/commit-analyzer",
+			{
+				"preset": "conventionalcommits",
+				"releaseRules": [
+					{
+						"type": "feat",
+						"release": "minor"
+					},
+					{
+						"type": "fix",
+						"release": "patch"
+					},
+					{
+						"type": "perf",
+						"release": "patch"
+					},
+					{
+						"type": "revert",
+						"release": "patch"
+					},
+					{
+						"type": "docs",
+						"release": "patch"
+					},
+					{
+						"type": "style",
+						"release": "patch"
+					},
+					{
+						"type": "refactor",
+						"release": "patch"
+					},
+					{
+						"type": "test",
+						"release": "patch"
+					},
+					{
+						"type": "build",
+						"release": "patch"
+					},
+					{
+						"type": "ci",
+						"release": "patch"
+					},
+					{
+						"type": "chore",
+						"release": false
+					},
+					{
+						"breaking": true,
+						"release": "major"
+					}
+				]
+			}
+		],
 		[
 			"@semantic-release/release-notes-generator",
 			{
-				"preset": "conventionalcommits"
+				"preset": "conventionalcommits",
+				"presetConfig": {
+					"types": [
+						{
+							"type": "feat",
+							"section": "Features"
+						},
+						{
+							"type": "fix",
+							"section": "Bug Fixes"
+						},
+						{
+							"type": "perf",
+							"section": "Performance Improvements"
+						},
+						{
+							"type": "revert",
+							"section": "Reverts"
+						},
+						{
+							"type": "docs",
+							"section": "Documentation"
+						},
+						{
+							"type": "style",
+							"section": "Styles"
+						},
+						{
+							"type": "refactor",
+							"section": "Code Refactoring"
+						},
+						{
+							"type": "test",
+							"section": "Tests"
+						},
+						{
+							"type": "build",
+							"section": "Build System"
+						},
+						{
+							"type": "ci",
+							"section": "CI/CD"
+						}
+					]
+				}
 			}
 		],
 		[
 			"@semantic-release/changelog",
 			{
-				"changelogFile": "CHANGELOG/CHANGELOG.md"
+				"changelogFile": "CHANGELOG.md"
 			}
 		],
-		"@semantic-release/npm",
+		[
+			"@semantic-release/npm",
+			{
+				"pkgRoot": "."
+			}
+		],
 		[
 			"@semantic-release/git",
 			{
-				"assets": ["CHANGELOG/CHANGELOG.md", "package.json"],
+				"assets": [
+					"CHANGELOG.md",
+					"package.json",
+					"packages/*/package.json"
+				],
 				"message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
 			}
 		],
