feat(ci): add multi-semantic-release for monorepo npm publishing

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -116,10 +116,7 @@
 			}
 		],
 		[
-			"@semantic-release/npm",
-			{
-				"pkgRoot": "."
-			}
+			"@semantic-release/npm"
 		],
 		[
 			"@semantic-release/git",
