--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/git": "^10.0.1",
 		"conventional-changelog-conventionalcommits": "^9.1.0",
+		"multi-semantic-release": "^3.1.0",
 		"prettier": "^3.7.4",
 		"semantic-release": "^25.0.2",
 		"tsup": "^8.5.1"
