--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,7 +1,5 @@
 {
-	"branches": [
-		"main"
-	],
+	"branches": ["main"],
 	"plugins": [
 		[
 			"@semantic-release/commit-analyzer",
@@ -115,17 +113,11 @@
 				"changelogFile": "CHANGELOG.md"
 			}
 		],
-		[
-			"@semantic-release/npm"
-		],
+		["@semantic-release/npm"],
 		[
 			"@semantic-release/git",
 			{
-				"assets": [
-					"CHANGELOG.md",
-					"package.json",
-					"packages/*/package.json"
-				],
+				"assets": ["CHANGELOG.md", "package.json", "packages/*/package.json"],
 				"message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
 			}
 		],
