--- a/app/package.json
+++ b/app/package.json
@@ -12,19 +12,19 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@effuse/core": "1.0.0",
-		"@effuse/i18n": "1.0.0",
-		"@effuse/ink": "1.0.0",
-		"@effuse/query": "1.0.0",
-		"@effuse/router": "1.0.0",
-		"@effuse/store": "1.0.0",
+		"@effuse/core": "workspace:*",
+		"@effuse/i18n": "workspace:*",
+		"@effuse/ink": "workspace:*",
+		"@effuse/query": "workspace:*",
+		"@effuse/router": "workspace:*",
+		"@effuse/store": "workspace:*",
 		"lenis": "^1.3.17",
-		"motion": "^12.24.7"
+		"motion": "^12.24.10"
 	},
 	"devDependencies": {
-		"@effuse/compiler": "1.0.0",
+		"@effuse/compiler": "workspace:*",
 		"@types/node": "^25.0.3",
 		"typescript": "^5.9.3",
-		"vite": "^7.3.0"
+		"vite": "^7.3.1"
 	}
 }
