--- a/packages/ink/tsconfig.json
+++ b/packages/ink/tsconfig.json
@@ -24,5 +24,5 @@
 		"jsxImportSource": "@effuse/core"
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist", "**/*.test.ts"]
+	"exclude": ["node_modules", "dist"]
 }
