fix(ci): build packages sequentially to respect dependency order
The parallel build was causing @effuse/ink to start building before
@effuse/core finished generating its TypeScript declarations.

Using --workspace-concurrency=1 ensures packages build in topological
order, respecting workspace dependencies.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build
-        run: pnpm build
+      - name: Build packages
+        run: pnpm -r --workspace-concurrency=1 build
 
       - name: Type check
         run: pnpm typecheck
