--- a/packages/use/package.json
+++ b/packages/use/package.json
@@ -4,6 +4,9 @@
 	"description": "The essential collection of reactive hooks for Effuse. Simple, type-safe, and designed to help you build better applications faster.",
 	"author": "Chris M. Pérez",
 	"license": "MIT",
+	"publishConfig": {
+		"access": "public"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/chrismichaelps/effuse.git"
